--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           PERSONAL_TOKEN: ${{ secrets.TEST }} # 你的个人访问令牌
-          EXTERNAL_REPOSITORY: yjw-byte/my_blog_-show # 你的GitHub Pages仓库
+          EXTERNAL_REPOSITORY: yjw-byte/my_blog_show # 你的GitHub Pages仓库
           PUBLISH_BRANCH: main # 或者是你的GitHub Pages分支
           PUBLISH_DIR: ./
           commit_message: ${{ github.event.head_commit.message }}
